--- a/.massivewikibuilder/mwb.yaml
+++ b/.massivewikibuilder/mwb.yaml
@@ -2,7 +2,7 @@
 wiki_title: A Massive Wiki testing wiki
 
 # the author of your wiki
-author: me, myself, and I
+author: me, myself, and a connected unconscious
 
 # the centralized Git repo (an HTML link is good)
 repo: '<a href="https://github.com/band/myMassiveTestWiki">GitHub/band/myMassiveTestWiki</a>'
